[package]
name = "wahs"
version = "0.1.0"
edition = "2024"
default-run = "wahs"

[dependencies]
warc = "0.4"
httparse = "1.10.1"
axum = { version = "0.8.6", default-features = false, features = ["http1", "query", "tokio"] }
argh = { version = "0.1.13", default-features = false, features = ["help"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread", "net", "fs", "io-util", "sync", "time"] }
mimalloc = "0.1.48"
url = "2.5.4"
percent-encoding = "2.3.1"
lol_html = "2.7.0"
libflate = "1"

[[bin]]
name = "gencdx"
