[package]
name = "wahs"
version = "0.1.0"
edition = "2024"
default-run = "wahs"

[dependencies]
warc = { version = "0.4", default-features = false }
httparse = "1.10.1"
axum = { version = "0.8.6", default-features = false, features = ["http1", "query", "tokio"] }
argh = { version = "0.1.13", default-features = false, features = ["help"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread", "net", "fs", "io-util", "sync", "time", "signal"] }
mimalloc = { version = "0.1.48", features = ["v3"] }
url = "2.5.4"
percent-encoding = "2.3.1"
lol_html = "2.7.0"
libflate = "1"
html-escape = "0.2.13"

[[bin]]
name = "gencdx"
